--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,7 @@ edition = "2018"
 
 [dependencies]
 
-[dependencies.gtk]
-version = "0.9.0"
-features = ["v3_16"]
-
-[dependencies.gio]
-version = ""
-features = ["v2_44"]
-
+gtk = { version = "0.9.2", features = ["v3_22"] }
+# glib = "0.10"
+gio = { version = "0.9", features = ["v2_56"] }
+# gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gdk-pixbuf" }
