--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ gtk = { version = "0.9.2", features = ["v3_22"] }
 # glib = "0.10"
 gio = { version = "0.9", features = ["v2_56"] }
 # gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gdk-pixbuf" }
+humansize = "1.1.1"
